Volunteer joinDate - new date controller + last version update in login page + fix cmdParams in getvoluntter WS

--- a/Road to Recovery/pages/viewRidePats.html
+++ b/Road to Recovery/pages/viewRidePats.html
@@ -63,7 +63,8 @@
            // $("#UnassignedRidePats").prop('checked', localStorage.unassigned);
            // $("#MyRidePats").prop('checked', localStorage.myRidePats);
 
-            $.fn.dataTable.moment('DD/MM/YY HH:mm');
+//            $.fn.dataTable.moment('DD/MM/YY HH:mm');
+            $.fn.dataTable.moment('DD/MM/YY');
             //$('#example').DataTable();
             // $.fn.dataTable.moment('DD/MM/YYYY HH:MM');//'' DD/MM/YYYY HH:MM
 
