New datepicker to ridePatForm

--- a/Road to Recovery/pages/volunteerForm.html
+++ b/Road to Recovery/pages/volunteerForm.html
@@ -66,13 +66,13 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <!--City Autocomplete-->
     <!--DatePicker css+js-->
-    <link href="../plugins/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css" rel="stylesheet">
+    <!--<link href="../plugins/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css" rel="stylesheet">
     <link href="../plugins/bootstrap-daterangepicker/daterangepicker.css" rel="stylesheet">
     <script src="../plugins/moment/moment.js"></script>
     <script src="../plugins/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
-    <script src="../plugins/bootstrap-daterangepicker/daterangepicker.js"></script>
+    <script src="../plugins/bootstrap-daterangepicker/daterangepicker.js"></script>-->
 
-    <script src="lib/datepicker-he.js"></script>
+    <!--<script src="lib/datepicker-he.js"></script>-->
 
     <script>
         checkCookie();
@@ -634,7 +634,7 @@
     <script src="../plugins/jquery-validation/dist/jquery.validate.min.js"></script>
     <script>
         $(document).ready(function () {
-            datePicker();
+           // datePicker();
             generateCities();
             generateVolTypes();
             // DO NOT REMOVE : GLOBAL FUNCTIONS!
@@ -860,7 +860,7 @@
             addressesArrayData = [];
             addRowCount = 0;
             numberOfRecords = 0;
-            datePicker();
+           // datePicker();
 
             $("#jqGrid").jqGrid({
                 ajaxSelectOptions: {
