fix for volunteer without join date

--- a/Road to Recovery/pages/ridePatForm.html
+++ b/Road to Recovery/pages/ridePatForm.html
@@ -787,7 +787,7 @@
                     if (minutes < 10) minutes = minutes + "0";
                     if (day < 10) day = "0" + day;
                     if (month < 10) month = "0" + month;
-                    date = year + "-" + month + "-" + day
+                    date = year + "-" + month + "-" + day;
                     
                     //rdate = ryear + "-" + rmonth + "-" + rday;
                     document.getElementById("dateRide").value = date;
