--- a/Road to Recovery/pages/volunteerForm.html
+++ b/Road to Recovery/pages/volunteerForm.html
@@ -734,7 +734,8 @@
 
                         },
                         error: function (err) {
-                            alert("Error in setVolunteer: " + err.responseText);
+
+                            //alert("Error in setVolunteer: " + err.responseText);
 
                             if (err.responseText.indexOf("phone already exists") != -1) {
                                 swal(
